tests/spec/emit/snapshots/generic_static_method_non_inferred_type_arg.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Container<T> {
    items: Slice<T>,
    label: string,
  }
  
  impl<T> Container<T> {
    fn new(label: string) -> Container<T> {
      Container { items: Slice.new<T>(), label }
    }
  }
  
  fn test() -> string {
    let c = Container.new<int>("numbers")
    c.label
  }
---
package main

type Container[T any] struct {
	items []T
	label string
}

func Container_new[T any](label string) Container[T] {
	return Container[T]{
		items: []T{},
		label: label,
	}
}

func test() string {
	c := Container_new[int]("numbers")
	return c.label
}
