tests/spec/emit/snapshots/generic_struct.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Box<T> { value: T }\n"
---
package main

type Box[T any] struct {
	value T
}
