tests/spec/emit/snapshots/generic_struct_function_field_or_pattern.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  struct Handler<T> { callback: fn(T) -> int }
  enum E { A(Handler<string>), B(Handler<string>) }
  
  fn test(e: E) -> int {
    let E.A(Handler { callback }) | E.B(Handler { callback }) = e else { return 0; };
    callback("test")
  }
---
package main

func MakeEA(arg0 Handler[string]) E {
	return E{Tag: EA, A: arg0}
}

func MakeEB(arg0 Handler[string]) E {
	return E{Tag: EB, B: arg0}
}

type Handler[T any] struct {
	callback func(T) int
}

type ETag uint8

const (
	EA ETag = iota
	EB
)

type E struct {
	Tag ETag
	A   Handler[string]
	B   Handler[string]
}

func test(e E) int {
	var callback func(string) int
	if e.Tag == EA {
		callback = e.A.callback
	} else if e.Tag == EB {
		callback = e.B.callback
	} else {
		return 0
	}
	return callback("test")
}
