tests/spec/emit/snapshots/generic_struct_tuple_field_or_pattern.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  struct Pair<T> { coords: (T, T) }
  enum E { A(Pair<int>), B(Pair<int>) }
  
  fn test(e: E) -> int {
    let E.A(Pair { coords: (x, y) }) | E.B(Pair { coords: (x, y) }) = e else { return 0; };
    x + y
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func MakeEA(arg0 Pair[int]) E {
	return E{Tag: EA, A: arg0}
}

func MakeEB(arg0 Pair[int]) E {
	return E{Tag: EB, B: arg0}
}

type Pair[T any] struct {
	coords lisette.Tuple2[T, T]
}

type ETag uint8

const (
	EA ETag = iota
	EB
)

type E struct {
	Tag ETag
	A   Pair[int]
	B   Pair[int]
}

func test(e E) int {
	var x int
	var y int
	if e.Tag == EA {
		x = e.A.coords.First
		y = e.A.coords.Second
	} else if e.Tag == EB {
		x = e.B.coords.First
		y = e.B.coords.Second
	} else {
		return 0
	}
	return x + y
}
