tests/spec/emit/snapshots/generic_struct_with_map_field_comparable_constraint.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  struct Cache<K: Comparable, V> {
    data: Map<K, V>,
  }
---
package main

type Cache[K comparable, V any] struct {
	data map[K]V
}
