tests/spec/emit/snapshots/generic_tuple_struct_constructor_inserts_adapter.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  struct Entry { name: string }
  
  pub interface Cache {
    #[go(comma_ok)]
    fn Get(key: string) -> Option<Ref<Entry>>
  }
  
  struct MyCache {}
  
  impl MyCache {
    fn Get(self, _key: string) -> Option<Ref<Entry>> {
      None
    }
  }
  
  struct Wrapper<T>(T)
  
  fn main() {
    let c = MyCache {}
    let _: Wrapper<Cache> = Wrapper<Cache>(c)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Entry struct {
	name string
}

type Cache interface {
	Get(string) (*Entry, bool)
}

type MyCache struct{}

func (m MyCache) Get(_ string) *Entry {
	return nil
}

type Wrapper[T any] struct {
	F0 T
}

func main() {
	c := MyCache{}
	_ = Wrapper[Cache]{F0: _lisAdapter_MyCache_Cache_0{inner: c}}
}

type _lisAdapter_MyCache_Cache_0 struct {
	inner MyCache
}

func (a _lisAdapter_MyCache_Cache_0) Get(arg0 string) (*Entry, bool) {
	raw := a.inner.Get(arg0)
	option := lisette.OptionFromNilable[*Entry](raw, raw == nil)
	if option.Tag == lisette.OptionSome {
		return option.SomeVal, true
	}
	return nil, false
}
